--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </tbody>
     </table>
 
-    <form id="book-form">
+    <form id="book-form" onsubmit="return BookStoring(document.getElementById('title').value , document.getElementById('author').value)">
       <div class="form-group">
         <label for="title">Title</label>
         <input type="text" id="title" class="form-control" placeholder="title">
