Add bookID as Random function

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <table class="table">
       <thead>
         <tr>
+          <th class="bookID">BookID</th>
           <th>Title</th>
           <th>Author</th>
         </tr>
