--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <form id="book-form" action="#">
         <input id="title" type="text" placeholder="Title"> <br><br>
         <input id="author" type="text" placeholder="Author"><br><br>
+        <div class="error"></div>
         <input id="add-btn" type="submit" value="Add Books">
     </form>
 
