--- a/index.html
+++ b/index.html
@@ -10,14 +10,13 @@
 </head>
 
 <body>
-   <main>
-    <h1>All Awesome Books</h1>
+    <h1>My Awesome Books</h1>
     <table>
-        <!-- <tr>
+        <tr>
             <th>Title</th>
             <th>Author</th>
             <th></th>
-        </tr> -->
+        </tr>
         <tbody id="collection">
         </tbody>
     </table>
@@ -25,9 +24,8 @@
     <form id="book-form" action="#">
         <input id="title" type="text" placeholder="Title"> <br><br>
         <input id="author" type="text" placeholder="Author"><br><br>
-        <input id="add-btn" type="submit" value="Add">
+        <input id="add-btn" type="submit" value="Add Books">
     </form>
-   </main>
 
 <script defer src="script.js"></script>
 
