fix linter error

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     </table>
     <br>
     <form id="book-form" action="#">
+        <h2 class="input-header">Add a New book </h2>
         <input id="title" type="text" placeholder="Title"> <br><br>
         <input id="author" type="text" placeholder="Author"><br><br>
         <input id="add-btn" type="submit" value="Add">
