Changes Done Suggested By Code Reviewe PR#3

--- a/index.html
+++ b/index.html
@@ -10,23 +10,24 @@
 </head>
 
 <body>
-    <h1>My Awesome Books</h1>
+   <main>
+    <h1>All Awesome Books</h1>
     <table>
-        <tr>
+        <!-- <tr>
             <th>Title</th>
             <th>Author</th>
             <th></th>
-        </tr>
+        </tr> -->
         <tbody id="collection">
         </tbody>
     </table>
     <br>
     <form id="book-form" action="#">
-        <h2 class="input-header">Add a New book </h2>
         <input id="title" type="text" placeholder="Title"> <br><br>
         <input id="author" type="text" placeholder="Author"><br><br>
-        <input id="add-btn" type="submit" value="Add Books">
+        <input id="add-btn" type="submit" value="Add">
     </form>
+   </main>
 
 <script defer src="script.js"></script>
 
