--- a/index.html
+++ b/index.html
@@ -10,8 +10,15 @@
 </head>
 
 <body>
-<header>
-    <h1>All Awesome Books</h1>
+<header class="header">
+    <h1>Awesome Books</h1>
+    <nav class="nav-bar">
+      <ul class="nav-ul">
+        <li>List</li>
+        <li class="add-new">Add New</li>
+        <li>Contact</li>
+      </ul>
+    </nav>
 </header>
    <main>
     
@@ -41,6 +48,9 @@
             <li>Our Address: Streetname 22, 84503 City, Country</li>
         </ul>
     </section>
+    <footer class="footer">
+      <h4> © All Rights Reserved - 2022   mudasir9757@gmail.com</h4>
+    </footer>
     
    </main>
 
