--- a/index.html
+++ b/index.html
@@ -10,41 +10,42 @@
 </head>
 
 <body>
-<header>
-    <h1>All Awesome Books</h1>
-</header>
-   <main>
-    
-    <section id="book-list">
-        <table>
-            <tbody id="collection">
-            </tbody>
-        </table>
-    </section>
-    <br>
-    <section id="form section">
-        <form id="book-form" action="#">
-            <input id="title" type="text" placeholder="Title"> <br><br>
-            <input id="author" type="text" placeholder="Author"><br><br>
-            <input id="add-btn" type="submit" value="Add">
-        </form>
-    </section>
-    <section id="contact">
-        <h2>Contact Information</h2>
-        <h3>Do you have any questions or you just want to say "Hello"? <br>
-            You can reach out to us!
-        </h3>
+    <header>
+        <h1>All Awesome Books</h1>
+    </header>
+    <main>
 
-        <ul>
-            <li>Our e-mail:mail@mail.com</li>
-            <li>Our Phone: 0002302320323</li>
-            <li>Our Address: Streetname 22, 84503 City, Country</li>
-        </ul>
-    </section>
-    
-   </main>
+        <section id="book-list">
+            <table>
+                <tbody id="collection">
+                </tbody>
+            </table>
+        </section>
 
-<script defer src="script.js"></script>
+        <section id="form-section">
+            <form id="book-form" action="#">
+                <input id="title" type="text" placeholder="Title"> <br><br>
+                <input id="author" type="text" placeholder="Author"><br><br>
+                <input id="add-btn" type="submit" value="Add">
+            </form>
+        </section>
+
+        <section id="contact">
+            <h2 class="contact-h2">Contact Information</h2>
+            <h3>Do you have any questions or you just want to say "Hello"? <br>
+                You can reach out to us!
+            </h3>
+
+            <ul class="lists">
+                <li>Our e-mail:mail@mail.com</li>
+                <li>Our Phone: 0002302320323</li>
+                <li>Our Address: Streetname 22, 84503 City, Country</li>
+            </ul>
+        </section>
+
+    </main>
+
+    <script defer src="script.js"></script>
 
 </body>
 
