--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <h1>Awesome Books</h1>
         <nav class="nav-bar">
             <ul class="nav-ul">
-                <li>List</li>
-                <li class="add-new">Add New</li>
-                <li>Contact</li>
+                <li><a id="list-nav" href="#">List</a> </li>
+                <li ><a id="add-nav" href="#">Add New</a> </li>
+                <li ><a id="contact-nav" href="#">Contact</a> </li>
             </ul>
         </nav>
     </header>
@@ -29,7 +29,7 @@
             </table>
         </section>
         <br>
-        <section id="form section">
+        <section id="form-section">
             <form id="book-form" action="#">
                 <input id="title" type="text" placeholder="Title"> <br><br>
                 <input id="author" type="text" placeholder="Author"><br><br>
