Fix the nav-bar section functionality

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <title>Awesome Books</title>
 </head>
 
-<body>
+<body class="body" onload="homeSectionDisplay()">
     <header class="header">
         <h1>Awesome Books</h1>
         <nav class="nav-bar">
             <ul class="nav-ul">
-                <li><a id="list-nav" href="#">List</a> </li>
-                <li ><a id="add-nav" href="#">Add New</a> </li>
-                <li ><a id="contact-nav" href="#">Contact</a> </li>
+                <li><a id="list-nav" href="#book-list">List</a> </li>
+                <li ><a id="add-nav" href="#form-section">Add New</a> </li>
+                <li ><a id="contact-nav" href="#contact">Contact</a> </li>
             </ul>
         </nav>
     </header>
